# robot-agent

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py  schema.py
src/execution/: gridworld.py
src/perception/: mock_scene_parser.py  qwen_scene_parser.py
src/planning/: task_planner.py
src/validation/: plan_validator.py  scene_validator.py
