[project]
name = "robot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "torch>=2.12.0",
    "transformers>=5.10.1",
]
